# HandGestureClassification

./: README  README.md  install.sh
src/: CMakeLists.txt
src/ClassifierLib/: CMakeLists.txt
src/ClassifierLib/Classifier/: ANNClassifier.cpp  ANNClassifier.h  ActivationFunction.cpp  Adaboost_2_Classifier.cpp  Adaboost_2_Classifier.h  Base_2_Classifier.h  Base_M_Classifier.h  CMakeLists.txt  CascadeClassifier.cpp  CascadeClassifier.h  Classifier.h  ClassifierFactory.cpp  ClassifierFactory.h  Naive_2_WClassifier.cpp  Naive_2_WClassifier.h  SVMClassifier.cpp  SVMClassifier.h
src/ClassifierLib/Classifier/bk/: NearClassifier.cpp  NearClassifier.h  RandomClassifier.cpp  RandomClassifier.h  WeightClassifier.h
src/FeatureLib/: CMakeLists.txt  featurelib.h  projection.h
src/FeatureLib/Feature/: CMakeLists.txt  feature.h  pca.cpp  pca.h
src/FeatureLib/ImgProcess/: CMakeLists.txt  imgprocess.h  patch.cpp  patch.h
src/Trainer/: BaseProcess.h  BaseTrainer.cpp  BaseTrainer.h  CMakeLists.txt  Trainer.h
src/process/ClassiferTrainer/: base_trainer.cpp
src/process/FeatureExtraction/: pca.cpp  pca_feature.cpp
train_template/: matlab_eigen_face.txt
train_template/img2pgm/: makefile
train_template/pgm2pca2model/: config  makefile
train_template/right2left/: makefile
